UserServiceTests updated